--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
+    align-items: center;
+}
+
+.pictureContainer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 #left-col {
@@ -46,6 +55,7 @@
     padding-left:10px;
     text-indent: 15px;
     line-height: 25px;
+    color: #3F4A4C;
 }
 .icon {
     margin-right: 10px;
