--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: gray;
+  display: flex;
+  margin: 0 auto;
+}
+#root {
+  background-color: white;
+}
 #head {
   align-items: center;
   justify-content: center;
   display: flex;
   flex-direction: row;
-  margin-bottom: 30px;
+  padding: 30px;
 }
 #profile {
-  font-size: 80px;
+  font-size: 70px;
   text-align: center;
-  letter-spacing: 20px;
   margin: 10px;
+  z-index: 10;
 }
 #profpic {
-  margin-left: 10px;
+  margin: 0px 50px;
   border-radius: 50%;
-  width: 120px;
+  width: 150px;
+  z-index: 100;
 }
 #container {
   display: flex;
   flex-direction: row;
+  z-index: 10;
 }
 .infoContainer {
   display: flex;
@@ -46,26 +59,26 @@
   margin-left: 5px;
   background-color: #f9fbff;
 }
-.info {
-  font-size: 15px;
+.contactInfo {
   padding-left: 10px;
 }
+.otherInfo {
+  line-height: 24px;
+}
 #summaryText {
-  font-size: 15px;
   padding-left: 10px;
   text-indent: 15px;
   line-height: 25px;
-  color: #3f4a4c;
 }
 .icon {
-  margin-right: 10px;
   border-radius: 50%;
   background: white;
-  width: 25px;
+  width: 30px;
 }
 
 .grayTxt {
-  color: gray;
+  color: rgb(95, 95, 95);
+  font-size: 15px;
 }
 .pinkTxt {
   color: #ff968d;
@@ -86,13 +99,17 @@ a:hover {
   color: #385dc3;
 }
 #projectpic {
-  width: 200px;
+  width: 120px;
   margin: 5px;
 }
 
 #grid-container {
   display: grid;
   grid-gap: 10px;
+}
+
+ul {
+  padding-inline-start: 20px;;
 }
 
 #grid-item1 {
