--- a/style.css
+++ b/style.css
@@ -129,6 +129,10 @@ ul {
   grid-column: 3;
   grid-row: 1;
 }
+#grid-item4 {
+  grid-column: 4;
+  grid-row: 1;
+}
 
 #indent {
   padding-left: 7px;
