--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
 #profile {
   font-size: 70px;
   text-align: center;
-  margin: 10px;
+  margin: 15px;
+  margin-top: 0px;
   z-index: 10;
 }
 #profpic {
@@ -50,11 +51,11 @@ body {
 
 #left-col {
   background-color: #ffefee;
-  width: 25%;
+  width: 31%;
   padding: 30px;
 }
 #right-col {
-  width: 75%;
+  width: 69%;
   padding: 20px 20px 20px 25px;
   margin-left: 5px;
   background-color: #f9fbff;
@@ -62,22 +63,22 @@ body {
 .contactInfo {
   padding-left: 10px;
 }
-.otherInfo {
-  line-height: 24px;
+.marginTop {
+  margin-top: -10px;
 }
 #summaryText {
   padding-left: 10px;
-  text-indent: 15px;
   line-height: 25px;
+  text-align: justify;
 }
 .icon {
-  align-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 30px;
   height: 30px;
   background-color: white;
   border-radius: 50%;
-  padding-left: 6px;
-  padding-top: 7px;
   color: #ff968d;
 }
 
@@ -140,4 +141,11 @@ ul {
 #indent {
   padding-left: 7px;
   line-height: 20px;
+}
+
+li {
+  padding-bottom: 5px;
+}
+.referenceItem {
+  margin-top: 16px;
 }
